--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -66,7 +66,7 @@
             android:layout_height="wrap_content"
             android:textSize="56sp"
             android:fontFamily="sans-serif-light"
-            android:text='@{String.format("%d%s", viewModel.currentTemperature, viewModel.temperatureUnit)}'
+            android:text='@{String.format("%d°", viewModel.currentWeatherView.temperature)}'
             app:layout_constraintEnd_toEndOf="@+id/iv_weather_condition"
             app:layout_constraintStart_toStartOf="@+id/iv_weather_condition"
             app:layout_constraintTop_toBottomOf="@+id/iv_weather_condition"
@@ -85,7 +85,7 @@
             <ProgressBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="@{viewModel.loadingNextDaysForecasts ? View.VISIBLE : View.GONE}"
+                android:visibility="@{safeUnbox(viewModel.loadingForecasts) ? View.VISIBLE : View.GONE}"
                 android:layout_gravity="center"
                 />
 
@@ -93,7 +93,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:visibility="@{viewModel.loadingNextDaysForecasts ? View.GONE : View.VISIBLE}"
+                android:visibility="@{safeUnbox(viewModel.loadingForecasts) ? View.GONE : View.VISIBLE}"
                 >
 
                 <include
