--- a/app/src/main/res/layout/partial_details_next_days_forecast.xml
+++ b/app/src/main/res/layout/partial_details_next_days_forecast.xml
@@ -60,7 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light"
-            android:text='@{String.format("%d%s", view.temperature, view.temperatureUnit)}'
+            android:text='@{String.format("%d°", view.temperature)}'
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/imageView2"
